fix: resolve some tests problems